base/builds/regulus/argocd/projects/monitoring/manifests/radar/HTTPRoute-radar.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radar
spec:
  hostnames:
  - radar.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: radar-dashboard
      port: 9280
      weight: 1
    filters:
    - type: CORS
      cors:
        allowOrigins:
        - "http://localhost:8080"
        - "http://127.0.0.1:8080"
        allowCredentials: true
        allowMethods:
        - "*"
        maxAge: 3600
    matches:
    - path:
        type: PathPrefix
        value: /
